feat:中文过滤工具创建

--- a/brslf_QrcToQssTestDemo/resources.qrc
+++ b/brslf_QrcToQssTestDemo/resources.qrc
@@ -1,4 +1,7 @@
 <RCC>
     <qresource prefix="/QssFiles"/>
     <qresource prefix="/images"/>
+    <qresource prefix="/">
+        <file>Resources/qssSettings/MyLineEdit.qss</file>
+    </qresource>
 </RCC>
