--- a/brslf_ToolForCreateMOZISDKComponentsFIles/widget.ui
+++ b/brslf_ToolForCreateMOZISDKComponentsFIles/widget.ui
@@ -176,6 +176,12 @@
          </item>
          <item>
           <widget class="QPushButton" name="pushButtonAutoCreate">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
            <property name="text">
             <string>自动生成</string>
            </property>
